gcc/testsuite/g++.dg/cpp0x/range-for19.C
// PR c++/49838

// { dg-do compile { target c++11 } }

int main()
{
  auto a;        // { dg-error "no initializer" }
  for(auto i: a) // { dg-error "deduce" }
    ;
}
